--- a/templates/index.html
+++ b/templates/index.html
@@ -6,6 +6,19 @@
     </head>
     <body class="container">
         <h1 class="title">Welcome to Casting Agency</h1>
-        <button class="login-button">Log in</button>
+        <button class="login-button" id="toggle" onclick="myFunction()">Log in</button>
     </body>
+
+    <script>
+    function myFunction() {
+        var change = document.getElementById("toggle");
+        if (change.innerHTML == "Log in")
+        {
+            change.innerHTML = "Nah";
+            }
+        else {
+            change.innerHTML = "Log in";
+            }
+            }
+    </script>
 </html>
